force-app/main/default/objects/pd_jp_20151124__ABM_PardotCampaignList__c/pd_jp_20151124__ABM_PardotCampaignList__c.object-meta.xml
<CustomObject>
    <label>MAPlusAC Pardotキャンペーン</label>
    <nameField>
        <label>CampaignList</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>