force-app/main/default/objects/pd_jp_20151124__ABM_PardotCampaignList__c/fields/pd_jp_20151124__CampaignId__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__CampaignId__c</fullName>
    <label>キャンペーンID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>