force-app/main/default/objects/pd_jp_20151124__ABM_PardotCampaignList__c/fields/pd_jp_20151124__CrmFid__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__CrmFid__c</fullName>
    <label>CRMID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>