force-app/main/default/objects/pd_jp_20151124__ABM_PardotCampaignList__c/fields/pd_jp_20151124__ExclusionFlg__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__ExclusionFlg__c</fullName>
    <description>1:取り込み対象　2:除外対象</description>
    <label>除外フラグ</label>
    <length>1</length>
    <type>Text</type>
</CustomField>