force-app/main/default/objects/pd_jp_20151124__ABM_PardotCampaignList__c/fields/pd_jp_20151124__TargetFlg__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__TargetFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取得対象</label>
    <type>Checkbox</type>
</CustomField>