force-app/main/default/objects/pd_jp_20151124__ABM_PardotCampaignList__c/listViews/pd_jp_20151124__All.listView-meta.xml
<ListView>
    <fullName>pd_jp_20151124__All</fullName>
    <columns>NAME</columns>
    <columns>pd_jp_20151124__CampaignId__c</columns>
    <columns>pd_jp_20151124__CampaignName__c</columns>
    <columns>pd_jp_20151124__TargetFlg__c</columns>
    <columns>pd_jp_20151124__ExclusionFlg__c</columns>
    <columns>pd_jp_20151124__CrmFid__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>